@@ -4,8 +4,10 @@ X-editable changelog
 
 Version 1.2.1 wip
 ----------------------------  
-[enh] removed dataType='json' from 'submit' api method. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
-[enh] removed dataType='json' from saving request. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
+[enh] 'submit' method changed: error-callback's parameter simplified (vitalets) 
+[enh] 'submit' method changed: now when response 200 OK it does not set pk automatically, use success callback (vitalets) 
+[enh] 'submit' method changed: removed dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
+[enh] removed default ajax dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
 [enh] select: do not show 'sourceError' in element during autotext execution (vitalets) 
 
 
